<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- General -->
    <string name="app_name">Kendali Pintu</string>
    <string name="na">n/a</string>
    <string name="change">Ubah</string>
    <string name="apply">Simpan</string>
    <string name="delete">Hapus</string>
    <string name="logout">Logout</string>
    <string name="loading_message">Mohon Tunggu</string>
    <string name="close">Tutup</string>
    <string name="refresh">Muat Ulang</string>
    <string name="title_dialog_server_error">Kesalahan Server</string>
    <string name="message_dialog_connection_error">1. Koneksi internet bermasalah\n2. Hostname belum dikonfigurasi\n3. Konfigurasi hostname salah\n4. Server mungkin tidak tersedia</string>
    <string name="notification_ticker">Log Baru</string>
    <string name="notification_title">Log</string>
    <string name="string_server_offline">Server tidak tersedia</string>
    <string name="string_arduino_offline">Arduino tidak tersedia</string>
    <string name="string_confirmation">Konfirmasi</string>
    <string name="string_are_you_sure">Apakah Anda yakin?</string>

    <!-- Main Activity -->
    <string name="action_remote_open_door">Buka Pintu Jarak Jauh</string>
    <string name="action_open_door">Buka Pintu</string>
    <string name="action_device_status">Status Perangkat</string>
    <string name="action_log">Log</string>
    <string name="action_user">Pengguna</string>
    <string name="action_settings">Pengaturan</string>
    <string name="toast_admin_privilege">Hak Admin dibutuhkan</string>

    <!-- Status Perangkat Activity -->
    <string name="title_activity_device_status">Status Perangkat</string>
    <string name="string_status">Status</string>
    <string name="toast_device_status_on">Perangkat telah dihidupkan</string>
    <string name="toast_device_status_off">Perangkat telah dimatikan</string>
    <string name="toast_device_attempts_change">Batas pengulangan telah diganti</string>
    <string name="toast_connection_error">Data gagal dikirim. Periksa koneksi internet</string>

    <!-- Log Activity -->
    <string name="title_activity_log">Log</string>
    <string name="action_refresh">Refresh</string>

    <!-- Pengguna Activity -->
    <string name="title_activity_user">Pengguna</string>
    <string name="action_add_account">Tambah</string>
    <string name="string_loaded">Tidak ada data tersedia</string>
    <string name="dialog_title_userform">Form Pengguna</string>
    <string name="hint_dialog_password">Hanya angka. Tidak lebih dari 5 digit</string>
    <string name="hint_username_input">Username</string>
    <string name="hint_password_input">Password</string>

    <!-- Pengaturan Activity -->
    <string name="title_activity_setting">Pengaturan</string>
    <string name="string_hostname">Server Hostname</string>
    <string name="string_receive_notifications">Notifikasi</string>
    <string name="string_admin_logout">Logout sebagai Admin?</string>
    <string name="hint_dialog_hostname_input">Hostname (tanpa http://)</string>
    <string name="toast_notification_setting_on">Anda akan menerima notifikasi</string>
    <string name="toast_notification_setting_off">Anda tidak akan menerima notifikasi</string>
    <string name="string_as_admin">Hak Admin</string>
    <string name="toast_admin_login_incorrect">Username atau Password salah</string>
    <string name="toast_admin_login_failed">Koneksi gagal</string>
    <string name="toast_admin_login_success">Login berhasil</string>
    <string name="toast_admin_logout_success">Logout berhasil</string>

    <!-- Login Activity -->
    <string name="title_activity_login">Login</string>
    <string name="hint_login_user">User ID</string>
    <string name="string_previous">Kembali</string>

    <!-- Menu Item -->
    <string name="menu_action_about">Tentang</string>

    <!-- NFC Open Door Activity -->
    <string name="title_activity_open_door">Buka Pintu</string>
    <string name="string_nfc_tap">Tap NFC</string>
    <string name="string_nfc_invalid">NFC tidak terdaftar</string>
    <string name="string_nfc_enter">NFC Masuk</string>
    <string name="string_nfc_exit">NFC Keluar</string>

    <!-- Barcode Open Door Activity -->
    <string name="string_barcode_refresh">Refresh</string>
    <string name="string_barcode_enter">Barcode Masuk</string>
    <string name="string_barcode_exit">Barcode Keluar</string>
    <string name="string_barcode_invalid">Barcode tidak terdaftar</string>
    <string name="string_barcode_instruction">Scan QR Code</string>
    
    <!-- Remote Open Door Activity -->
	<string name="title_activity_remote_open_door">Buka Pintu</string>
	<string name="string_door_opened">Pintu Terbuka</string>
	
    <!-- Setup Activity -->
    <string name="title_activity_setup">Setup</string>
    <string name="string_setup_message">Masukan IP Address/Hostname Server Web</string>
    <string name="string_next">Berikut</string>

</resources>
