<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    android:orientation="vertical"
    tools:context=".LoginActivity" >

    <EditText
        android:id="@+id/user_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
		android:layout_marginBottom="10dp"
        android:hint="@string/hint_login_user"
        android:inputType="number" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/user_pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
		android:layout_marginBottom="10dp"
        android:hint="@string/hint_password_input"
        android:inputType="numberPassword" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:text="@string/title_activity_login"
        android:onClick="onClickLogin" />

</LinearLayout>

