<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".LoginActivity" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/string_setup_message"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/hostname_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
		android:layout_marginBottom="10dp"
        android:hint="@string/string_hostname"
        android:inputType="text" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/btnSetHostname"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:text="@string/string_next"
        android:onClick="onClickNext" />

</LinearLayout>