<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/txtUserID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone">
    </TextView>
    
    <EditText
        android:id="@+id/txtUserName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="4dp"
        android:layout_marginTop="4dp"
        android:textCursorDrawable="@null"
        android:ems="10"
        android:hint="@string/hint_username_input"
        android:inputType="text"
        android:textColor="#FFFFFF"
        android:textColorHint="#CCCCCC" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/txtUserPass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="2dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="4dp"
        android:layout_marginTop="4dp"
        android:textCursorDrawable="@null"
        android:ems="10"
        android:hint="@string/hint_password_input"
        android:inputType="number"
        android:textColor="#FFFFFF"
        android:textColorHint="#CCCCCC"
        android:maxLength="5"/>

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="2dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="4dp"
        android:layout_marginTop="4dp"
        android:text="@string/hint_dialog_password"
        android:textColor="#CCCCCC"/>

</LinearLayout>
